# math-core

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  mathcore.toml  pyproject.toml  release-plz.toml
.github/: release.yml
crates/math-core/: Cargo.toml
crates/math-core-cli/: Cargo.toml  README.md
crates/math-core-cli/src/: config_file.rs  html_entities.rs  main.rs  replace.rs
crates/math-core-python/: Cargo.toml  README.md
crates/math-core-python/src/: lib.rs
crates/math-core-wasm/: Cargo.toml
crates/math-core-wasm/src/: lib.rs
crates/math-core-wasm/tests/: wasm.rs
crates/math-core/examples/: browser_test.rs  equations.rs  minijinja.rs
crates/math-core/src/: character_class.rs  color_defs.rs  commands.rs  environments.rs  error.rs  global_state.rs  lexer.rs  lib.rs  parser.rs  predefined.rs  specifications.rs  split_on_ascii.rs  text_parser.rs  token.rs  token_manager.rs  token_queue.rs
crates/math-core/tests/: conversion_test.rs  custom_cmd_test.rs  error_test.rs  substitution_test.rs  wiki_test.rs
crates/mathml-renderer/: Cargo.toml  README.md
crates/mathml-renderer/src/: arena.rs  ast.rs  attribute.rs  length.rs  lib.rs  super_char.rs  symbol.rs  table.rs
latex2mmlc/: Cargo.toml
latex2mmlc/examples/: equations.rs
latex2mmlc/src/: arena.rs  ast.rs  attribute.rs  color_defs.rs  commands.rs  env.rs  error.rs  lexer.rs  lib.rs  ops.rs  parse.rs  predefined.rs  specifications.rs  str_arena.rs  token.rs
latex2mmlc/src/snapshots/: latex2mmlc__lexer__tests__assigment_with_space.snap  latex2mmlc__lexer__tests__comment.snap  latex2mmlc__lexer__tests__lower_case_greek.snap  latex2mmlc__lexer__tests__lower_case_latin.snap  latex2mmlc__lexer__tests__number_with_dot.snap  latex2mmlc__lexer__tests__number_with_dot_at_end.snap  latex2mmlc__lexer__tests__number_with_two_inner_dots.snap  latex2mmlc__lexer__tests__simple_expression.snap  latex2mmlc__lexer__tests__simple_number.snap  latex2mmlc__lexer__tests__space_and_number.snap  latex2mmlc__lexer__tests__space_and_number.snap.new  latex2mmlc__lexer__tests__space_in_text.snap  latex2mmlc__lexer__tests__two_lower_case_greek.snap  latex2mmlc__parse__tests__big_paren.snap  latex2mmlc__parse__tests__boldsymbol_greek_var.snap  latex2mmlc__parse__tests__colon_fusion_in_subscript.snap  latex2mmlc__parse__tests__colon_fusion_stop.snap  latex2mmlc__parse__tests__comment.snap  latex2mmlc__parse__tests__complex_square_root.snap  latex2mmlc__parse__tests__double_prime.snap  latex2mmlc__parse__tests__frac_with_subscript.snap  latex2mmlc__parse__tests__genfrac.snap  latex2mmlc__parse__tests__integral_with_reversed_limits.snap  latex2mmlc__parse__tests__long_sub_super.snap  latex2mmlc__parse__tests__mathit_func.snap  latex2mmlc__parse__tests__mathit_greek.snap  latex2mmlc__parse__tests__mathit_mathrm_nested.snap  latex2mmlc__parse__tests__mathit_of_max.snap  latex2mmlc__parse__tests__mathrm_mathit_nested.snap  latex2mmlc__parse__tests__mathrm_mathit_nested_multi.snap  latex2mmlc__parse__tests__matrix.snap  latex2mmlc__parse__tests__number_after_circumflex.snap  latex2mmlc__parse__tests__number_after_lim.snap  latex2mmlc__parse__tests__number_after_overbrace.snap  latex2mmlc__parse__tests__number_after_underscore.snap  latex2mmlc__parse__tests__number_with_dot.snap  latex2mmlc__parse__tests__number_with_dot_and_letter.snap  latex2mmlc__parse__tests__number_with_dot_at_end.snap  latex2mmlc__parse__tests__number_with_spaces.snap  latex2mmlc__parse__tests__number_with_spaces_in_text.snap  (+201 more)
latex2mmlc/tests/: struct_size_test.rs  wiki_test.rs
latex2mmlc/tests/snapshots/: wiki_test__wiki000.snap  wiki_test__wiki001.snap  wiki_test__wiki002.snap  wiki_test__wiki003.snap  wiki_test__wiki004.snap  wiki_test__wiki006.snap  wiki_test__wiki007.snap  wiki_test__wiki008.snap  wiki_test__wiki009.snap  wiki_test__wiki010.snap  wiki_test__wiki011.snap  wiki_test__wiki012.snap  wiki_test__wiki013.snap  wiki_test__wiki014.snap  wiki_test__wiki015.snap  wiki_test__wiki016.snap  wiki_test__wiki017.snap  wiki_test__wiki018.snap  wiki_test__wiki019.snap  wiki_test__wiki020.snap  wiki_test__wiki021.snap  wiki_test__wiki022.snap  wiki_test__wiki023.snap  wiki_test__wiki024.snap  wiki_test__wiki025.snap  wiki_test__wiki026.snap  wiki_test__wiki027.snap  wiki_test__wiki028.snap  wiki_test__wiki031.snap  wiki_test__wiki032.snap  wiki_test__wiki033.snap  wiki_test__wiki034.snap  wiki_test__wiki035.snap  wiki_test__wiki036.snap  wiki_test__wiki037.snap  wiki_test__wiki038.snap  wiki_test__wiki039.snap  wiki_test__wiki040.snap  wiki_test__wiki041.snap  wiki_test__wiki042.snap  (+147 more)
latex2mmlc_cli/: Cargo.toml
latex2mmlc_cli/src/: html_entities.rs  main.rs  replace.rs
latex2mmlc_python/: Cargo.toml
latex2mmlc_python/src/: lib.rs
latex2mmlc_wasm/: Cargo.toml  README.md  index.html  main.js
latex2mmlc_wasm/src/: lib.rs
latex2mmlc_wasm/tests/: wasm.rs
math-core/: Cargo.toml
math-core-cli/: Cargo.toml
math-core-cli/src/: config_file.rs  main.rs  replace.rs
math-core-python/: Cargo.toml  README.md
math-core-python/src/: lib.rs
math-core-wasm/: Cargo.toml  README.md
math-core-wasm/src/: lib.rs
math-core-wasm/tests/: wasm.rs
math-core/examples/: equations.rs  minijinja.rs
math-core/src/: atod.rs  atof.rs  commands.rs  environments.rs  error.rs  html_utils.rs  lexer.rs  lib.rs  parse.rs  predefined.rs  raw_node_slice.rs  specifications.rs  text_parser.rs  token.rs  token_manager.rs
math-core/src/latex_parser/: atof.rs  character_class.rs  color_defs.rs  commands.rs  environments.rs  error.rs  lexer.rs  mod.rs  parse.rs  predefined.rs  specifications.rs  text_parser.rs  token.rs  token_manager.rs
math-core/src/mathml_renderer/: arena.rs  ast.rs  attribute.rs  symbol.rs  table.rs
math-core/src/snapshots/: math_core__lexer__tests__assigment_with_space.snap  (+450 more)
math-core/tests/: conversion_test.rs  custom_cmd_test.rs  error_test.rs  struct_size_test.rs  wiki_test.rs
mathml_renderer/: Cargo.toml
mathml_renderer/src/: arena.rs  ast.rs  attribute.rs  color.rs  fmt.rs  itoa.rs  length.rs  lib.rs  ops.rs  symbol.rs  table.rs
(+1623 files in other folders)
