[workspace]
members = ["math-core", "math-core-cli", "math-core-python", "math-core-wasm"]
exclude = ["fuzz"]
default-members = ["math-core-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
version = "0.1.1"
repository = "https://github.com/tmke8/math-core"

[workspace.dependencies]
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
bitflags = "2.10.0"
memchr = "2.7.6"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release.package.math-core-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.release]
lto = true
codegen-units = 1
