[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
default-members = ["crates/math-core-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT"
version = "0.5.5"
repository = "https://github.com/tmke8/math-core"

[workspace.dependencies]
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
memchr = "2.8.0"
strum = "0.28.0"
strum_macros = "0.28.0"
static_assertions = "1.1.0"
ariadne = "0.6.0"

[workspace.lints.clippy]
unnecessary_semicolon = "warn"
match_wildcard_for_single_variants = "warn"
explicit_iter_loop = "warn"
match_same_arms = "warn"
elidable_lifetime_names = "warn"
trivially_copy_pass_by_ref = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release.package.math-core-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.release]
lto = true
codegen-units = 1
