[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "latex2mmlc"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"

[project.optional-dependencies]
tests = ["pytest"]
dynamic = ["version"]

[tool.maturin]
manifest-path = "latex2mmlc_python/Cargo.toml"
python-source = "python"
module-name = "latex2mmlc._latex2mmlc_rust"
features = ["pyo3/extension-module"]
