[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "math_core"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"

[project.optional-dependencies]
tests = ["pytest"]
dynamic = ["version"]

[tool.maturin]
manifest-path = "math-core-python/Cargo.toml"
python-source = "python"
module-name = "math_core._math_core_rust"
features = ["pyo3/extension-module"]
