[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "math-core"
authors = [
    {name = "Thomas MK", email = "tmke8@posteo.net"},
]
description = "Convert LaTeX math to MathML Core"
readme = "math-core-python/README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
license = "MIT"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/tmke8/math-core.git"

[project.optional-dependencies]
tests = ["pytest"]

[tool.maturin]
manifest-path = "math-core-python/Cargo.toml"
python-source = "python"
python-packages = ["math_core"]
include = ["python/math_core/py.typed", "python/math_core/_math_core_rust.pyi"]
module-name = "math_core._math_core_rust"
features = ["pyo3/extension-module"]
bindings = "pyo3"
# compatibility = "pypi"

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.pyright]
include = ["python"]
venvPath = "."
venv = ".venv"
