[package]
name = "latex2mmlc"
version = "0.1.0"
authors = [
    "Hiromu Sugiura <h.sugiura0705@outlook.com>",
    "Thomas Kehrenberg <tmke8@posteo.net>",
]
edition = { workspace = true }
rust-version = { workspace = true }

description = "Convert LaTeX equations to MathML Core"
repository = "https://github.com/tmke8/latex2mmlc"
readme = "README.md"
license = { workspace = true }
keywords = ["latex", "mathml"]
categories = ["science"]

[dependencies]
bumpalo = "3.16.0"
no-panic = "0.1.33"
phf = { version = "0.11.2", features = ["macros"] }
strum_macros = "0.26.4"

[dev-dependencies]
insta = { version = "1.41.1", features = ["default", "ron"] }
serde = { version = "1.0.215", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.1"
similar = "2.6.0"
