[package]
name = "latex2mmlc"
version = "0.1.0"
authors = [
    "Hiromu Sugiura <h.sugiura0705@outlook.com>",
    "Thomas Kehrenberg <tmke8@posteo.net>",
]
edition = { workspace = true }
rust-version = { workspace = true }

description = "Convert LaTeX equations to MathML Core"
repository = "https://github.com/tmke8/latex2mmlc"
readme = "README.md"
license = { workspace = true }
keywords = ["latex", "mathml"]
categories = ["science"]

[dependencies]
bumpalo = "3.17.0"
phf = { version = "0.11.3", features = ["macros"] }
strum_macros = "0.27.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["default", "ron"] }
serde = { version = "1.0.217", features = ["derive"] }
regex = "1.11.1"
