[package]
name = "latex2mmlc"
version = "0.1.0"
authors = [
    "Hiromu Sugiura <h.sugiura0705@outlook.com>",
    "Thomas Kehrenberg <tmke8@posteo.net>",
]
edition = { workspace = true }
rust-version = { workspace = true }

description = "Convert LaTeX equations to MathML Core"
repository = "https://github.com/tmke8/latex2mmlc"
readme = "README.md"
license = { workspace = true }
keywords = ["latex", "mathml"]
categories = ["science"]

[dependencies]
mathml_renderer = { path = "../mathml_renderer" }

phf = { version = "0.11.3", features = ["macros"] }
strum_macros = "0.27.1"

[dev-dependencies]
mathml_renderer = { path = "../mathml_renderer", features = ["serde"] }
insta = { version = "1.41.1", features = ["default", "ron"] }
regex = "1.11.1"
