[package]
name = "latex2mmlc_cli"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
math-core = { path = "../math-core" }
memchr = "2.7.4"
phf = { version = "0.11.3", features = ["macros"] }
