[package]
name = "latex2mmlc_wasm"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
latex2mmlc = { path = "../latex2mmlc" }

bumpalo = { workspace = true }
wasm-bindgen = "0.2.89"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"
