[package]
name = "latex2mmlc_wasm"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
latex2mmlc = { path = "../latex2mmlc" }
lol_alloc = "0.4.1"
wasm-bindgen = "0.2.95"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
