[package]
name = "math-core-cli"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mathcore"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
math-core = { path = "../math-core", features = ["serde"] }
memchr = "2.7.5"
phf = { version = "0.11.3", features = ["macros"] }
toml = "0.8.23"
serde = { workspace = true }
