[package]
name = "math-core-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mathcore"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
math-core = { path = "../math-core", features = ["serde"] }
memchr = "2.7.5"
phf = { version = "0.12.1", features = ["macros"] }
toml = "0.9.4"
serde = { workspace = true }
