[package]
name = "math-core-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mathcore"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
math-core = { path = "../math-core", features = ["serde"], version = "0.1.1" }
memchr = { workspace = true }
phf = { version = "0.13.1", features = ["macros"] }
toml = "0.9.10"
serde = { workspace = true }
