[package]
name = "math-core-python"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Python bindings for the math-core library using PyO3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "math_core_python"
crate-type = ["cdylib"]

[dependencies]
math-core = { path = "../math-core" }
pyo3 = "0.25.1"
rustc-hash = { workspace = true }
