[package]
name = "math-core"
version = "0.1.0"
authors = [
    "Hiromu Sugiura <h.sugiura0705@outlook.com>",
    "Thomas Kehrenberg <tmke8@posteo.net>",
]
edition = { workspace = true }
rust-version = { workspace = true }
resolver = "2"

description = "Convert LaTeX equations to MathML Core"
repository = "https://github.com/tmke8/math-core"
readme = "README.md"
license = { workspace = true }
keywords = ["latex", "mathml"]
categories = ["science"]

[dependencies]
stable-arena = { version = "0.2.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"], optional = true }
dtoa = { version = "1.0" }
phf = { version = "0.11.3", features = ["macros"] }
strum = "0.27.1"
strum_macros = "0.27.1"

[dev-dependencies]
insta = { version = "1.41.1", features = ["default", "ron"] }
regex = "1.11.1"
math-core = { path = ".", features = ["serde"] }

[features]
serde = ["dep:serde"]
