[package]
name = "math-core"
authors = [
    "Hiromu Sugiura <h.sugiura0705@outlook.com>",
    "Thomas MK <tmke8@posteo.net>",
]
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
resolver = "2"

description = "Convert LaTeX equations to MathML Core"
readme = "../README.md"
license = { workspace = true }
repository = { workspace = true }
keywords = ["latex", "mathml"]
categories = ["science"]

exclude = ["/src/snapshots", "/src/latex_parser/snapshots", "/tests/snapshots"]

[dependencies]
stable-arena = { version = "0.2.0", default-features = false }
serde = { workspace = true, optional = true }
dtoa = { version = "1.0" }
phf = { version = "0.12.1", features = ["macros"] }
strum = "0.27.1"
strum_macros = "0.27.1"
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { version = "1.41.1", features = ["default", "ron"] }
regex = "1.11.1"
math-core = { path = ".", features = ["serde"] }
minijinja = "2.11.0"

[features]
serde = ["dep:serde"]
