[package]
name = "math-core"
authors = [
    "Hiromu Sugiura <h.sugiura0705@outlook.com>",
    "Thomas MK <tmke8@posteo.net>",
]
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
resolver = "2"

description = "Convert LaTeX equations to MathML Core"
readme = "../README.md"
license = { workspace = true }
repository = { workspace = true }
keywords = ["latex", "mathml"]
categories = ["science"]

exclude = ["/src/snapshots", "/src/latex_parser/snapshots", "/tests/snapshots"]

[dependencies]
stable-arena = { version = "0.2.0", default-features = false }
serde = { workspace = true, optional = true }
dtoa = { version = "1.0" }
phf = { version = "0.13.1", features = ["macros"] }
strum = "0.27.2"
strum_macros = "0.27.2"
rustc-hash = { workspace = true }
bitflags = { workspace = true }
html-escape = "0.2.13"


[dev-dependencies]
insta = { version = "1.43.2", features = ["default", "ron"] }
regex = "1.12.2"
math-core = { path = ".", features = ["serde"] }
minijinja = "2.12.0"
bitflags = { workspace = true, features = ["serde"] }

[features]
serde = ["dep:serde"]
