[package]
name = "mathml_renderer"
version = "0.1.0"
authors = [
    "Hiromu Sugiura <h.sugiura0705@outlook.com>",
    "Thomas Kehrenberg <tmke8@posteo.net>",
]
edition = { workspace = true }
rust-version = { workspace = true }

license = { workspace = true }
keywords = ["latex", "mathml"]
categories = ["science"]

[dependencies]
stable-arena = "0.1.1"
strum_macros = "0.27.1"
serde = { version = "1.0.218", features = ["derive"], optional = true }
dtoa = { version = "1.0" }

[dev-dependencies]

[features]
serde = ["dep:serde"]
