[package]
name = "math-core-cli"
description = "CLI for converting LaTeX equations to MathML Core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = "README.md"
keywords = ["latex", "mathml"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mathcore"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
math-core = { path = "../math-core", features = ["serde"], version = "0.5.0" }
memchr = { workspace = true }
phf = { version = "0.13.1", features = ["macros"] }
toml = "0.9.11"
serde = { workspace = true }
