[package]
name = "math-core-python"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = "Python bindings for the math-core library using PyO3"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "math_core_python"
crate-type = ["cdylib"]

[dependencies]
math-core = { path = "../math-core", features = ["ariadne"] }
ariadne = { workspace = true }
pyo3 = { version = "0.28.3", features = ["abi3-py310"] }
rustc-hash = { workspace = true }

[lints]
workspace = true
