[package]
name = "math-core-wasm"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
math-core = { path = "../math-core" }
lol_alloc = "0.4.1"
wasm-bindgen = "0.2.100"
js-sys = "0.3.82"
rustc-hash = { workspace = true }
wasm-bindgen-test = "0.3.55"

[dev-dependencies]
mathml-renderer = { path = "../mathml-renderer", package = "math-core-renderer-internal" }
