[package]
name = "math-core"
authors = [
    "Hiromu Sugiura <h.sugiura0705@outlook.com>",
    "Thomas MK <tmke8@posteo.net>",
]
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
resolver = "2"

description = "Convert LaTeX equations to MathML Core"
readme = "../../README.md"
license = { workspace = true }
repository = { workspace = true }
keywords = ["latex", "mathml"]
categories = ["science"]

exclude = ["/src/snapshots", "/tests/snapshots"]

[dependencies]
mathml-renderer = { path = "../mathml-renderer", package = "math-core-renderer-internal", version = "0.5.0" }
serde = { workspace = true, optional = true }
serde-tuple-vec-map = { version = "1.0.1", optional = true }
phf = { version = "0.13.1", features = ["macros"] }
strum = { workspace = true }
strum_macros = { workspace = true }
static_assertions  = { workspace = true }
rustc-hash = { workspace = true }
memchr = { workspace = true }
ariadne = { version = "0.6.0", optional = true }

[dev-dependencies]
math-core = { path = ".", features = ["serde", "ariadne"] }
mathml-renderer = { path = "../mathml-renderer", package = "math-core-renderer-internal", version = "0.5.0", features = ["serde"] }
insta = { version = "1.46.3", features = ["default", "ron"] }
regex = "1.12.3"
minijinja = "2.15.1"

[features]
serde = ["dep:serde", "dep:serde-tuple-vec-map"]
ariadne = ["dep:ariadne"]
